# web_os_control

./: .gitignore  LICENSE  README.md  flutter_jank_metrics_01.json  flutter_jank_metrics_02.json  flutter_jank_metrics_03.json  flutter_jank_metrics_04.json  key.txt  pubspec.yaml
web_os/: .gitignore  .metadata  Cargo.toml  README.md  build.rs  ffigen.yaml  pubspec.yaml  web_os.h
web_os/android/: build.gradle  settings.gradle
web_os/android/src/main/: AndroidManifest.xml
web_os/lib/: utils.dart  web_os.dart  web_os_api_bindings.dart  web_os_audio.dart  web_os_bindings_api.dart  web_os_bindings_generated.dart  web_os_button.dart  web_os_channel.dart  web_os_network.dart  web_os_pointer.dart  web_os_system.dart
web_os/lib/web_os_client_api/: Web_os_network_api.dart  web_os_audio_api.dart  web_os_botton_api.dart  web_os_channel_api.dart  web_os_client_api.dart  web_os_network_api.dart  web_os_pointer_api.dart  web_os_system_api.dart  web_os_tv.dart  web_so_audio_api.dart
web_os/linux/: CMakeLists.txt
web_os/src/: CMakeLists.txt  client_state.rs  client_tasks.rs  discovery_tv.rs  json_in_file.rs  launch_app.rs  lib.rs  media_player_button.rs  motion_button.rs  pointer_control.rs  turn_on.rs  volume_control.rs  web_os.c  web_os.h  web_os_network_info_ffi.rs
web_os/src/mocks/: mock_search_tvs.rs  mock_turn_on.rs  mock_webos_client.rs  mock_webos_inf_loop.rs  mod.rs
web_os/test/: web_os_audio_test.dart  web_os_button_test.dart  web_os_channel_test.dart  web_os_network_test.dart  web_os_network_test.mocks.dart  web_os_pointer.dart  web_os_system_test.dart
(+91 files in other folders)
