[package]
edition = "2021"
name = "web_os"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
async-trait = "0.1.63"
lazy_static = "1.4.0"
lg-webos-client = { git = "https://github.com/samuel-cavalcanti/lg-webos-client.git" }
log = "0.4.17"
serde_json = "1.0.104"
tokio = { version = "1.24.2", features = ["full"] }
serde = "1.0.152"
allo-isolate = "0.1.18"

[target.'cfg(target_os = "linux")'.dependencies]
env_logger = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"

[build-dependencies]
cbindgen = "0.24.3"
